# libcutsim

./: README
py/: ascii_stlin_test.py  binary_stlin_test.py  cone_test.py  draw_triangles.py  loadmesh_test.py  mesh_test.py  minimal.py  myvtk.py  simple_move.py  stl_test.py  stlin_test.py  stlout_test.py  wireframe_test.py
py/example_stl/: libcutsim_ascii_import.stl  libcutsim_binary_import.stl
src/: CMakeLists.txt  bbox.cpp  bbox.hpp  cube_wireframe.hpp  cutsim.cpp  cutsim.hpp  cutsim_py.cpp  facet.hpp  fileio.cpp  fileio.hpp  gldata.cpp  gldata.hpp  glvertex.hpp  isosurface.hpp  marching_cubes.cpp  marching_cubes.hpp  octnode.cpp  octnode.hpp  octree.cpp  octree.hpp  volume.cpp  volume.hpp
